Fix menu overflow issue

--- a/css/index.sass
+++ b/css/index.sass
@@ -87,13 +87,14 @@ body
     background: $accent
     transition: all .4s
     z-index: -1
-    width: 100%
+    width: 0
     max-width: 500px
     display: flex
     justify-content: center
     align-items: center
     flex-direction: column
     font-size: 3rem
+    overflow: hidden
     a
       color: $white
 
@@ -103,6 +104,7 @@ body
       + .menu
         opacity: 1
         visibility: 1
+        width: 100%
         z-index: 2
       ~ .nav-button .bar
         background-color: $white
